# qq-cli

./: .gitignore  DECRYPT_CN.md  README.md  README_CN.md  package.json  pyproject.toml
qq_cli/: main.py
qq_cli/commands/: __init__.py  contacts.py  files.py  history.py  init.py  sessions.py
qq_cli/core/: contacts.py  context.py  db.py  decrypt.py  live.py  protobuf.py
qq_cli/keys/: scanner_macos.py
qq_cli/output/: formatter.py
scripts/: build_npm_binary.sh  pyinstaller_entry.py
src/: main.py
src/commands/: collections.py  contacts.py  decrypt.py  emojis.py  files.py  history.py  init.py  members.py  search.py  sessions.py  stats.py
src/core/: config.py  contacts.py  context.py  decrypt.py  live.py  messages.py
src/keys/: __init__.py  scanner_macos.py
src/qq_cli/commands/: collections.py  contacts.py  decrypt.py  emojis.py  history.py  members.py
src/qq_cli/core/: __init__.py  config.py  context.py  messages.py
src/qq_cli/keys/: __init__.py  find_qq_key_macos.c
tests/: test_context_modes.py  test_live_mode.py  test_qq_cli_smoke.py
